# currency_browser

./: README.MD
backend/: .gitignore  conftest.py  pyproject.toml
backend/config/: settings.py  urls.py
backend/currency/: admin.py  models.py  serializers.py  urls.py  views.py
backend/currency/migrations/: 0001_initial.py  0002_load_table_a_currencies_names.py
backend/currency/templates/currency/: currency_form_view.html
backend/currency/tests/: test_models.py
backend/fixtures/: currencies_names.json
backend/users/migrations/: 0001_initial.py
